# your_ai

./: .codecov.yml  .gitignore  BENCHMARK_IMPLEMENTATION.md  CHANGELOG.txt  CONTRIBUTING.md  EVALUATION_COMPLETE.md  EVALUATION_REPORT.md  EVALUATION_SUMMARY.txt  FIXES_APPLIED.md  GEMINI.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MEMORY_LEAK_ANALYSIS.md  MEMORY_LEAK_FIXES_APPLIED.md  MEMORY_LEAK_FIXES_COMPLETE.txt  MEMORY_LEAK_SUMMARY.md  MEMORY_TESTING.md  METAL_AND_ANE_SUMMARY.md  QUICK_EVALUATION.md  QUICK_START.md  QUICK_TRAINING_GUIDE.md  README.md  RECOMMENDED_CONFIGS.md  RELOAD_THRESHOLD_FIX_COMPLETE.txt  RESEARCH_FINDINGS.md  RUST_PORT_SUMMARY.md  TESTING.md  TEST_COVERAGE_IMPLEMENTATION.md  TRAINING_GUIDE.md  TRAINING_IMPROVEMENTS.md  TRAINING_SUCCESS_SUMMARY.md  VALIDATION_GUIDE.md  optimal_config_measured.json  optimal_config_results.json  pytest.ini  requirements.txt  validation_dolphin_8b.json  validation_hermes_7b.json
rust/: .gitignore  ADAMW_OPTIMIZATION_FINDINGS.md  ANE_DEPLOYMENT_GUIDE.md  BENCHMARK_COMMAND_IMPLEMENTED.md  BENCHMARK_IMPROVEMENTS.md  BENCHMARK_OOM_FALSE_POSITIVE_FIX.md  BENCHMARK_REGRESSION_FIX.md  BUILD_STATUS.md  BUILD_SUCCESS.md  CHANGELOG.md  CHECKPOINT_FIX_SUMMARY.md  CHECKPOINT_TESTS_SUMMARY.md  COMPLETION_SUMMARY.md  Cargo.toml  EMPIRICAL_OPTIMIZATION_IMPLEMENTED.md  FINAL_SUMMARY.md  FIXES_IMPLEMENTATION.md  FIXES_VERIFICATION.md  GETTING_STARTED.md  GPU_OPTIMIZATION_CHANGES.md  GRADIENT_DIAGNOSTIC.md  GRADIENT_FIX_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPROVE_MLX_BINDINGS.md  Makefile  (+24 more)
(+181 files in other folders)
