[package]
name = "your_ai_rs"
version = "0.2.0"
edition = "2021"
authors = ["Your AI Contributors"]
description = "Empirical Distrust Training for LLMs - Rust implementation with MLX"
license = "MIT"

[[bin]]
name = "your_ai"
path = "src/main.rs"

[dependencies]
mlx-rs = { version = "0.25.2", features = ["metal", "accelerate"] }
mlx-macros = "0.25.2"
mlx-sys = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
sha2 = "0.10"
rayon = "1.8"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.19"
chrono = "0.4"
num-traits = "0.2"
rand = "0.8"
tokenizers = "0.21"
safetensors = "0.4"
hf-hub = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
half = "2.3"
memmap2 = "0.9"

[patch.crates-io]
mlx-sys = { path = "patches/mlx-sys" }

[dev-dependencies]
tempfile = "3.8"
approx = "0.5"
tokio = { version = "1.35", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
